<resources>
    <string name="app_name">DogSimulator</string>

    <string name="string_continue">Continue</string>
    <string name="dog_image">Dog image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="menu_item_simulator">Simulator</string>
    <string name="menu_item_voice_memos">Voice Memos</string>
    <string name="menu_item_whistle">Whistle</string>
    <string name="menu_item_translator">Translator</string>
    <string name="how_to_use_text">First decide which training commands you want to pair with your whistle and how you will communicate those commands with your cat. For example, you may want your cat to "sit" when he hears one short burst of the whistle or to "come" when he hears three short bursts. It is best to start by pairing the whistle with one command at a time to avoid confusion.

\n\nNext, pair the whistle with a verbal command that your cat already knows, for example "sit". It is best to start in areas with few distractions and to keep training sessions short. Each time you command your cat to "sit" tap the whistle for a quick burst of sound. Praise your cat when he sits and repeat. Continue to give the verbal command quickly followed by the whistle.

\n\nThe next step is to play the whistle just prior to giving your verbal command. With enough practice, your cat will begin to associate the whistle with the behavior you want him to do and he will not need the verbal command. We recommend training in a variety of settings with varying levels of distractions to help your cat master the whistle command."
       </string>
    <string name="how_to_use_label">How To Use?</string>
    <string name="how_to_use">How to Use</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dog_simulator">Dog simulator</string>
    <string name="sliderValueText">100000 Hz</string>
    <string name="voice_memos_intro_text">Capture favorite moments with your dog. Create new emoji sounds.</string>
    <string name="new_voice_memo">New Voice Memo</string>
    <string name="third_slide_title">Express Emotions</string>
    <string name="third_slide_description">Express any emotion to your dog</string>
    <string name="second_slide_title">Have fun!</string>
    <string name="second_slide_description">Be friends with your pets</string>
    <string name="fourth_slide_title">Get unlimited access to your personal plan</string>
    <string name="fourth_slide_description">3 Days FREE Trial, Then 9.99$/Week, auto-renewable subscription</string>
    <string name="first_slide_title"><![CDATA[Dog & Human]]></string>
    <string name="first_slide_description">Simulate human to dog speech and vice versa</string>
    <string name="duration_text">0:00</string>
    <string name="dog">Dog</string>
    <string name="human">Human</string>
    <string name="enter_text_to_translate">Enter text to translate…</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


</resources>