<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliderBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_weight="1"
        android:contentDescription="@string/dog_image"
        android:src="@drawable/black_dog" />

    <TextView
        android:id="@+id/titleSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="@string/first_slide_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="190dp"
        android:fontFamily="@font/outfit_regular"
        android:gravity="center"
        android:text="@string/first_slide_description"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>