<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/blue"
    app:cardCornerRadius="12dp"
    android:layout_marginVertical="5dp"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/audioFileName"
                android:text="@string/title"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/audioCreationTime"
                android:text="@string/description"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/audioDuration"
            android:text="@string/duration_text"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>