<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliderBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornflower"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_marginHorizontal="5dp"
        android:layout_weight="3"
        android:contentDescription="@string/dog_image"
        android:src="@drawable/biege_dog" />


    <TextView
        android:id="@+id/titleSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="Get unlimited access to your personal plan"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/sliderSubscriptionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="5dp"
        android:divider="@null"
         />


    <TextView
        android:id="@+id/descriptionSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="3 Days FREE Trial, Then 9.99$/Week, auto-renewable subscription"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/outfit_bold"
        android:padding="6dp"
        android:text="@string/string_continue"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLater"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/maybe_later"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>