<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:isScrollContainer="false"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/sliderItemViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/outfit_bold"
        android:padding="6dp"
        android:text="@string/string_continue"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLater"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/maybe_later"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/subscriptionButton"
            android:layout_width="48dp"
            android:layout_height="34dp"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/cornflower"
            app:cornerRadius="12dp"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:insetLeft="2dp"
            android:insetRight="2dp"
            app:icon="@drawable/pro_button"
            app:iconSize="0dp"
            android:padding="11dp"
            app:iconTint="@null" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroup"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/toggleDogButton"
                style="@style/ToggleButtonGroupStyle"
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:text="@string/dog"
                android:textColor="@drawable/toggle_custom_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:icon="@drawable/dog"
                app:iconGravity="textStart"
                app:iconPadding="5dp"
                app:iconSize="0dp"
                app:iconTint="@null" />


            <Button
                android:id="@+id/toggleHumanButton"
                style="@style/ToggleButtonGroupStyle"
                android:layout_width="115dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto"
                android:text="@string/human"
                android:textColor="@drawable/toggle_custom_text"
                android:textColorHighlight="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:icon="@drawable/human"
                app:iconGravity="textEnd"
                app:iconPadding="5dp"
                app:iconSize="0dp"
                app:iconTint="@null" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/outfit_bold"
            android:paddingTop="19dp"
            android:text="@string/menu_item_whistle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/settings_24px"
            app:iconSize="0dp"
            app:iconTint="@color/dark_grey"/>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="10dp"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:translationZ="20dp"
        android:visibility="invisible"
        app:compatShadowEnabled="true"
        app:itemActiveIndicatorStyle="@style/App.Custom.Indicator"
        app:itemIconTint="@drawable/bottom_nav_color_icon"
        app:itemTextColor="@drawable/bottom_nav_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>